# Blog

./: .bazelignore  .bazelrc  .gitignore  404.html  BAZEL.md  BUILD.bazel  MODULE.bazel  README.md  atom.xml  config.toml  custom.css  index.html  package-lock.json  package.json  playwright.config.ts  robots.txt  sitemap.xml
.github/workflows/: bazel.yml  deploy.yml  visual.yml
about/: index.html
ai-learnings/: index.html
ai-learnings/clang-modules-bazel/: index.html
ai-learnings/ios-code-signing/: index.html
ai-learnings/mean-median-percentiles/: index.html
ai-learnings/profile-guided-optimization/: index.html
ar/: index.html
ar/about/: index.html
ar/blog/: index.html
ar/blog/agent-world-skills/: index.html
ar/blog/combine-subscriptions/: index.html
ar/blog/interview-instabug/: index.html
ar/blog/interview-swvl/: index.html
ar/blog/interviews-introduction/: index.html
ar/blog/memory-alignment-swift/: index.html
ar/blog/page/1/: index.html
ar/blog/rxswift-behaviorsubject/: index.html
ar/blog/unit-testing-intro/: index.html
ar/blog/volume-casting-scenekit/: index.html
ar/tags/: index.html
ar/tags/agents/: atom.xml  index.html
ar/tags/agents/page/1/: index.html
ar/tags/ai/: atom.xml  index.html
ar/tags/ai/page/1/: index.html
ar/tags/combine/: atom.xml  index.html
ar/tags/combine/page/1/: index.html
ar/tags/engineering/: atom.xml  index.html
ar/tags/engineering/page/1/: index.html
ar/tags/graphics/: atom.xml  index.html
ar/tags/graphics/page/1/: index.html
ar/tags/interviews/: atom.xml  index.html
ar/tags/interviews/page/1/: index.html
ar/tags/memory/: atom.xml  index.html
ar/tags/memory/page/1/: index.html
ar/tags/rxswift/: atom.xml  index.html
ar/tags/rxswift/page/1/: index.html
ar/tags/swift/: atom.xml  index.html
ar/tags/swift/page/1/: index.html
ar/tags/unit-testing/: atom.xml  index.html
ar/tags/unit-testing/page/1/: index.html
blog/: index.html
blog/agent-world-skills/: index.html
blog/combine-subscriptions/: index.html
blog/interview-instabug/: index.html
blog/interview-swvl/: index.html
blog/interviews-introduction/: index.html
blog/memory-alignment-swift/: index.html
blog/page/1/: index.html
blog/rxswift-behaviorsubject/: index.html
blog/unit-testing-intro/: index.html
blog/upgrade-your-tools/: index.html
blog/volume-casting-scenekit/: index.html
content/: _index.ar.md  _index.md  about.ar.md  about.md
content/ai-learnings/: _index.md
content/ai-learnings/2026-06-12-clang-modules-bazel/: index.md
content/ai-learnings/2026-06-14-mean-median-percentiles/: index.md
content/ai-learnings/2026-06-27-ios-code-signing/: index.md
content/ai-learnings/2026-07-12-profile-guided-optimization/: index.md
content/blog/: 2020-11-02-unit-testing-intro.ar.md  2020-11-02-unit-testing-intro.md  2020-11-07-memory-alignment-swift.ar.md  2020-11-07-memory-alignment-swift.md  2022-06-12-interview-swvl.ar.md  2022-06-12-interview-swvl.md  2022-06-12-interviews-introduction.ar.md  2022-06-12-interviews-introduction.md  2022-07-27-rxswift-behaviorsubject.ar.md  2022-07-27-rxswift-behaviorsubject.md  2022-07-28-combine-subscriptions.ar.md  2022-07-28-combine-subscriptions.md  2022-07-28-interview-instabug.ar.md  2022-07-28-interview-instabug.md  2022-08-07-volume-casting-scenekit.ar.md  2022-08-07-volume-casting-scenekit.md  2025-03-14-hello-world.md  _index.ar.md  _index.md
content/blog/2026-03-15-agent-world-skills/: index.ar.md  index.md
content/blog/2026-03-15-upgrade-your-tools/: index.md
i18n/: ar.toml  en.toml
static/css/: custom.css
tags/: index.html
tags/agents/: atom.xml  index.html
tags/agents/page/1/: index.html
tags/ai/: atom.xml  index.html
tags/ai-learnings/: atom.xml  index.html
tags/ai-learnings/page/1/: index.html
tags/ai/page/1/: index.html
tags/bazel/: atom.xml  index.html
tags/bazel/page/1/: index.html
tags/build-systems/: atom.xml  index.html
tags/build-systems/page/1/: index.html
tags/career/: atom.xml  index.html
tags/career/page/1/: index.html
tags/ci/: atom.xml  index.html
tags/ci/page/1/: index.html
tags/code-signing/: atom.xml  index.html
tags/code-signing/page/1/: index.html
tags/combine/: atom.xml  index.html
tags/combine/page/1/: index.html
tags/fastlane/: atom.xml  index.html
tags/fastlane/page/1/: index.html
tags/graphics/: atom.xml  index.html
tags/graphics/page/1/: index.html
tags/interviews/: atom.xml  index.html
tags/interviews/page/1/: index.html
tags/ios/: atom.xml  index.html
tags/ios/page/1/: index.html
tags/llvm/: atom.xml  index.html
tags/llvm/page/1/: index.html
tags/memory/: atom.xml  index.html
tags/memory/page/1/: index.html
tags/metrics/: atom.xml  index.html
tags/metrics/page/1/: index.html
tags/performance/: atom.xml  index.html
tags/performance/page/1/: index.html
tags/pgo/: atom.xml  index.html
tags/pgo/page/1/: index.html
tags/provisioning-profiles/: atom.xml  index.html
tags/provisioning-profiles/page/1/: index.html
tags/rxswift/: atom.xml  index.html
tags/rxswift/page/1/: index.html
tags/software-engineering/: atom.xml  index.html
tags/software-engineering/page/1/: index.html
tags/statistics/: atom.xml  index.html
tags/statistics/page/1/: index.html
tags/swift/: atom.xml  index.html
tags/swift/page/1/: index.html
tags/unit-testing/: atom.xml  index.html
tags/unit-testing/page/1/: index.html
templates/: article.html  base.html  index.html
templates/blog/: page.html
templates/partials/: card.html  giscus.html
tests/visual/: Dockerfile  README.md  generate-assets.cjs  visual.spec.ts
themes/duckquill/: config.toml
themes/duckquill/sass/: _article-list.scss
themes/duckquill/templates/partials/: articles.html
tools/playwright/: BUILD.bazel
tools/serve/: BUILD.bazel  serve.mjs
tools/zola/: BUILD.bazel  defs.bzl  extensions.bzl
